<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">游戏快乐</string>
    <string name="my_games">我的游戏</string>
    <string name="loading">加载中&#8230;</string>
    <string name="no_games_yet">没有游戏</string>
    <string name="add_games_now">马上添加</string>
    <string name="no_players_yet">还没有玩家</string>
    <string name="hayou_center_chongzhi_net_erro">网络异常，请重试！</string>
    <string name="hayou_score_game_1_emplyee_top">雇佣好友</string>
    <string name="hayou_score_game_1_recommend_top">推荐好友</string>
    <string name="ha_factory_no_sit">您目前不在好友工厂工作</string>
    <string name="hayou_score_game_text_work_factory">你暂时没有工作工厂</string>
    <string name="hayou_score_game_1_rank_friends_top">好友积分排行</string>
    <string name="hayou_score_game_1_rank_emplyee_top">员工积分排行</string>
    <string name="ha_score_game_2_lastpage_true">已经是最后一页</string>
    <string name="ha_user_info_area_cancel">取消</string>
    <string name="ha_user_info_area_positive">确定</string>
    <string name="share_title_txt_game_score">快来我的积分工厂一起赚取积分吧！</string>
    <string name="hayou_center_chongzhi_online_tip">兑换比率：￥1人民币 = 10个金币</string>
    <string name="hayou_center_chongzhi_online_chong">我要充</string>
    <string name="hayou_center_chongzhi_online_text">元人民币</string>
    <string name="hayou_center_chongzhi_online_tips">哈游戏金币是哈游戏网站的交易虚拟货币，可以用来：</string>
    <string name="hayou_center_chongzhi_online_tips_1">1.参与商家或者哈多网站的抽奖活动，赢取各种大奖</string>
    <string name="hayou_center_chongzhi_change_tip">兑换比率：￥1金币 = 10个积分</string>
    <string name="number_error">数字填写不合法</string>
    <string name="remote_call_failed">Failure calling remote service</string>
    <string name="hayou_center_remote_call_alipay_tips">购买金币</string>
    <string name="hayou_center_remote_call_alipay_body_top">在哈游交易平台购买了</string>
    <string name="hayou_center_remote_call_alipay_body_bottom">个金币</string>
     <string name="hayou_center_chongzhi_change_one">恭喜您，已成功兑换</string>
     <string name="hayou_center_chongzhi_online_two">个积分</string>
     <string name="hayou_center_chongzhi_title">充值</string>
     <string name="hayou_center_chongzhi_online">在线充值</string>
     <string name="hayou_center_chongzhi_recorde">充值记录</string>
     <string name="hayou_center_chongzhi_online_gold_left">账户金币余额:</string>
     <string name="hayou_center_mygift_sail_price_jinbi">金币</string>
     <string name="hayou_center_chongzhi_online_integral_left">账户积分余额:</string>
     <string name="hayou_center_guanzhu_create_group_name">分组名称:</string>
     <string name="hayou_center_guanzhu_create_group">创建分组</string>
     <string name="exchange_score">兑换积分</string>
     <string name="orders_for_the_arrest_edit">编辑通缉令</string>
     <string name="ha_you_tizi_share">分享</string>
     <string name="arrast_user_name_hint">5个字以内</string>
     <string name="ha_user_info_sex_male">男</string>
     <string name="arrast_user_info_job_hint">弹药师</string>
     <string name="arrast_info_hint">70个字以内</string>
     <string name="arrast_user_address_hint">25个字以内</string>
     <string name="arrast_name_null">姓名不能为空</string>
    <string name="arrast_sex_null">性别不能为空</string>
    <string name="arrast_job_null">职业不能为空</string>
    <string name="arrast_error_null">罪行描述不能为空</string>
    <string name="arrast_postname_null">发布者不能为空</string>
    <string name="arrast_address_null">所在地不能为空</string>
    <string name="arrast_icon_null">请设置头像</string>
    <string name="arrast_name_error">姓名不能超过15个字节，一个中文3个字节</string>
    <string name="arrast_sex_error">性别不能超过3个字节，一个中文3个字节</string>
    <string name="arrast_job_error">职业不能超过18个字节，一个中文3个字节</string>
    <string name="arrast_error_error">罪行不能超过210个字节，一个中文3个字节</string>
    <string name="arrast_postname_error">发布者不能超过15个字节，一个中文3个字节</string>
    <string name="arrast_address_error">所在地不能超过75个字节，一个中文3个字节</string>
    <string name="orders_for_the_arrest">通缉令</string>
    <string name="hayou_center_guanzhu_selected_group_save">保存</string>
    <string name="msg_pic_no_exit">图片文件不存在，请保存图片</string>
    <string name="share_title_txt">快来一起玩转盘，赢取任意游戏充值啦！</string>
    <string name="game_box_activity_three_title">招聘信息</string>
    <string name="game_box_category_0">发表了说说</string>
    <string name="game_box_category_1">转发了说说</string>
    <string name="game_box_category_2">发表了评论</string>
    <string name="game_box_slider_list_bottom_notify">已经到底，没有数据了</string>
      <string name="game_box_lodding_data">数据加载中...</string>
       <string name="game_box_activity_three_title_detailitem">招聘详情</string>

</resources>
