<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:background="@drawable/center_dialog_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/create_group_title_name"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/hayou_center_guanzhu_create_group"
        android:textColor="#FF6600"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/create_group_left_name"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/hayou_center_guanzhu_create_group_name"
            android:textColor="#999999"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp" >

            <EditText
                android:id="@+id/create_group_new_name"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_centerInParent="true"
                android:textColor="#FF6600"
                android:background="@drawable/eidt_background"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/create_group_new_name_detele"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_centerInParent="true"
                android:gravity="center|left"
                android:textColor="#FF6600"
                android:textSize="15sp"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/create_group_new_cancel"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/centercancel_button_selector"
            android:clickable="true" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/ha_user_info_area_cancel"
                android:textColor="#ffffff"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/create_group_new_positive"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/positive_button_selector"
            android:clickable="true" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/ha_user_info_area_positive"
                android:textColor="#ffffff"
                android:textSize="15sp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>