<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

   <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/header_bar_bg_color" >

        <Button
            android:id="@+id/arrast_three_back_btn"
            android:layout_width="42dp"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="#00000000"
            android:drawableLeft="@drawable/icon_back" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/orders_for_the_arrest_edit"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/arrast_activity_three_share_btn"
            android:layout_width="60dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/share_button_selector"
            android:gravity="center"
            android:shadowColor="#80000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="1"
            android:visibility="gone"
            android:text="@string/ha_you_tizi_share"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/arrast_bg"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6.5"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4.5"
                    android:background="@drawable/arrast_title" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:layout_weight="2.4"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/arrast_user_icon_edit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1.3"
                    android:background="@drawable/arrast_user_icon_bg"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="2"
                    android:orientation="vertical" >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1" >

                        <ImageView
                            android:id="@+id/arrast_user_name"
                            android:layout_width="46dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop"
                            android:src="@drawable/arrest_name" />

                        <EditText
                            android:id="@+id/arrast_user_name_edit"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="5dp"
                            android:layout_toRightOf="@id/arrast_user_name"
                            android:background="@drawable/arrast_text_no_selected_bg"
                            android:gravity="center|left"
                            android:hint="@string/arrast_user_name_hint"
                            android:paddingBottom="0px"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:paddingTop="0px"
                            android:singleLine="true"
                            android:textColor="#CC0000"
                            android:textSize="14sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="15dp"
                        android:layout_weight="1" >

                        <ImageView
                            android:id="@+id/arrast_user_sex"
                            android:layout_width="46dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop"
                            android:src="@drawable/arrest_sex" />

                        <EditText
                            android:id="@+id/arrast_user_sex_edit"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="5dp"
                            android:layout_toRightOf="@id/arrast_user_sex"
                            android:background="@drawable/arrast_text_no_selected_bg"
                            android:gravity="center|left"
                            android:hint="@string/ha_user_info_sex_male"
                            android:paddingBottom="0px"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:paddingTop="0px"
                            android:singleLine="true"
                            android:textColor="#CC0000"
                            android:textSize="14sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="15dp"
                        android:layout_weight="1" >

                        <ImageView
                            android:id="@+id/arrast_user_job"
                            android:layout_width="46dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop"
                            android:src="@drawable/arrest_job" />

                        <EditText
                            android:id="@+id/arrast_user_job_edit"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="5dp"
                            android:layout_toRightOf="@id/arrast_user_job"
                            android:background="@drawable/arrast_text_no_selected_bg"
                            android:gravity="center|left"
                            android:hint="@string/arrast_user_info_job_hint"
                            android:paddingBottom="0px"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:paddingTop="0px"
                            android:singleLine="true"
                            android:textColor="#CC0000"
                            android:textSize="14sp" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="4dp"
                android:layout_weight="2.8" >

                <ImageView
                    android:id="@+id/arrast_info_text"
                    android:layout_width="88dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="5dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/arrest_error" />

                <EditText
                    android:id="@+id/arrast_info_text_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/arrast_info_text"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/arrast_text_no_selected_bg"
                    android:ellipsize="end"
                    android:gravity="left"
                    android:hint="@string/arrast_info_hint"
                    android:lineSpacingExtra="2.5dp"
                    android:maxLines="4"
                    android:paddingBottom="0px"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:paddingTop="0px"
                    android:textColor="#3F3E3C"
                    android:textColorHint="#3F3E3C"
                    android:textSize="15sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.7"
                android:orientation="horizontal" >

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.3" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2" >

                    <ImageView
                        android:id="@+id/arrast_user_post_name"
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/arrest_postname" />

                    <EditText
                        android:id="@+id/arrast_user_post_name_edit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@id/arrast_user_post_name"
                        android:background="@drawable/arrast_text_no_selected_bg"
                        android:gravity="center|left"
                        android:paddingBottom="0px"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingTop="0px"
                        android:singleLine="true"
                        android:textColor="#CC0000"
                        android:textSize="14sp" />
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1.7" >

                <ImageView
                    android:id="@+id/arrast_user_address"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="5dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/arrest_address" />

                <EditText
                    android:id="@+id/arrast_user_address_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/arrast_user_address"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/arrast_text_no_selected_bg"
                    android:ellipsize="end"
                    android:gravity="left"
                    android:hint="@string/arrast_user_address_hint"
                    android:lineSpacingExtra="2.5dp"
                    android:lines="2"
                    android:paddingBottom="0px"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:paddingTop="0px"
                    android:textColor="#CC0000"
                    android:textSize="15sp" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9" >

            <Button
                android:id="@+id/arrast_sure_btn"
                android:layout_width="90dp"
                android:layout_height="32dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/arrast_button_selector" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>